Videos belongs to categories

--- a/app/views/videos/_video.html.erb
+++ b/app/views/videos/_video.html.erb
@@ -4,4 +4,9 @@
     <%= video.title %>
   </p>
 
+  <p>
+    <strong>Category:</strong>
+    <%= link_to video.try(:category).try(:title), video.category %>
+  </p>
+
 </div>
