template fix for bitten recors without video

--- a/app/views/videos/_video.html.erb
+++ b/app/views/videos/_video.html.erb
@@ -4,14 +4,17 @@
     <%= video.title %>
   </p>
 
-  <div style="width:400px; height:400px">
-    <%= image_tag(@video.thumbnail, style: 'width:100%;height:auto') %>
-  </div>
+  <% if @video.present? %>
+    <strong>Thumbnail:</strong>
+    <div style="width:400px; height:400px">
+      <%= image_tag(@video.thumbnail, style: 'width:100%;height:auto') %>
+    </div>
 
-  <div style="width:400px; height:400px">
-    <%= video_tag(url_for(@video.clip), style: 'width:100%; height: auto', controls: '') %>
-  </div>
-
+    <div style="width:400px; height:400px">
+      <strong>Video:</strong>
+      <%= video_tag(url_for(@video.clip), style: 'width:100%; height: auto', controls: '') %>
+    </div>
+  <% end %>
   <p>
     <strong>Category:</strong>
     <%= link_to video.try(:category).try(:title), video.category %>
